<resources>
    <string name="app_name">All my runs</string>
    <string name="start_activity">start activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="distance_extra">distance_extra</string>
    <string name="speed_extra">speed_extra</string>
    <string name="lat_extra">lat_extra</string>
    <string name="lon_extra">lon_extra</string>
    <string name="start_time_extra">start_time_extra</string>
    <string name="calculated_speed_extra">calculated_speed_extra</string>
    <string name="stop_activity">stop activity</string>
    <string name="child_speed_text">Average speed: %s</string>
    <string name="child_distance_text">Distance traveled: %s</string>
    <string name="yes_text">Yes</string>
    <string name="settings_text">Settings</string>
    <string name="no_text">No</string>
    <string name="run_name_default_text">My run</string>
    <string name="give_name_message">Give a name to your activity</string>
    <string name="save_run_message">Do you want to save the run?</string>
    <string name="at_text">at</string>
    <string name="distance_text">Distance</string>
    <string name="medium_speed_text">Average speed</string>
    <string name="calories_text">Calories</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="gps_progress_message">Awaiting GPS position…</string>
    <string name="cancel_message">Cancel</string>
    <string name="action_context_title">Actions</string>
    <string name="context_delete_message">Delete activity</string>
    <string name="ok_text">OK</string>
    <string name="prefs_weight">prefs_weight</string>
    <string name="error_weight_message">You inserted value not valid (%1$d Kg -%2$d Kg)</string>
    <string name="weight_with_unit_text">%s Kg</string>
    <string name="calories_extra">calories_extra</string>
    <string name="calories_unit_text">%d Kcal</string>
    <string name="value_not_valid_error">Value not valid</string>
    <string name="run_id_extra">run_id_extra</string>
    <string name="start_title_text">Start</string>
    <string name="end_title_text">End</string>
    <string name="running_time_text">Running time: %s</string>
    <string name="burned_calories_text">Burned Calories: %s</string>
    <string name="gps_frequency_summary">Set the frequncy time of the update, major frequency consume more batteries but is more precise</string>
    <string name="prefs_gps_frequency">prefs_gps_frequency</string>
    <string name="activity_history">Activity history</string>
    <string name="adjust_map_auto">Adjust map auto</string>
    <string name="calories_welcome_message">This value will be used to estimate the burned calories</string>
    <string name="insert_welcom_message">Insert your weight (Kg)</string>
    <string name="error_message">Error</string>
    <string name="history_label">My history</string>
    <string name="duration_text">Duration</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_calories">Sort by calories</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="sort_by_speed">Sort by speed</string>
    <string name="prefs_order_type">prefs_order_type</string>
    <string name="notification_content_text">Tap to resume</string>
    <string name="notification_title_text">All my runs in execution</string>
    <string name="prefs_audio_enable">prefs_audio_enabled</string>
    <string name="enable_audio">Enable audio</string>
    <string name="prefs_direction">prefs_direction</string>
    <string name="prefs_mapTitle">prefs_title</string>
    <string name="map_button_label">See the route</string>
    <string name="marker_snippet">Distance: %1$s \nAverage Speed: %2$s \nBurned Calories: %3$s</string>
    <string name="prefs_start_time">prefs_start_time</string>
    <string name="display_direction">Display direction</string>
    <string name="show_run_details">Show run details</string>
    <string name="start_title">Start</string>
    <string name="end_title">End</string>
    <string name="gps_preference_default">8</string>
    <string name="await_save_message">Await save confirmation</string>
    <string name="listdialog_title">Tap on item to show it on map</string>
    <string name="gps_weak_toast">Weak GPS signal</string>
    <string name="context_rename_message">Rename Activity</string>
    <string name="change_name_message">Change the activity name</string>
    <string name="change_name_title">Insert a new name</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_button">Confirm</string>
    <string name="activity_started">Activity started</string>
    <string name="gps_connected">GPS connected</string>
    <string name="gps_connection_lost">GPS connection lost</string>
    <string name="gps_found_messag">GPS Not Found</string>
    <string name="gps_ask">Want To Enable?</string>
    <string name="setting_unit_measure">Units of Measure settings</string>
    <string name="distance">Distance</string>
    <string name="settings_dialog_title">Select distance measure unit</string>
    <string name="summary_distance">change the measure unit of the distance</string>
    <string name="gps_settings">Gps update frequency</string>
    <string name="speed">Speed</string>
    <string name="summary_speed">change the measure unit of the speed</string>
    <string name="settings_label">Settings</string>

    <string-array name="gps_frequency_text">
        <item>8 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
    </string-array>


    <string-array name="history_sort_type">
      <item>Sort by time</item>
      <item>Sort by distance</item>
      <item>Sort by calories</item>
    </string-array>
</resources>
