<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="dv606.gc222bz.finalproject.MainActivity"
    android:weightSum="100">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        tools:context="dv606.gc222bz.finalproject.MainActivity" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/timer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00:00"
                    android:textSize="40sp"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/timer_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_text"
                    android:layout_below="@id/timer_text"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indicator_horizontal_margin"
            android:layout_marginRight="@dimen/indicator_horizontal_margin">

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/calories_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/cal_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_alignParentStart="true"/>


        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/indicator_horizontal_margin"
                android:layout_marginRight="@dimen/indicator_horizontal_margin">

                <TextView
                    android:id="@+id/distance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_text"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/calories_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories_text"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/speed_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_speed_text"
                    android:layout_alignParentStart="true"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_button"
                    android:theme="@style/AppTheme.Button.Start"
                    android:layout_centerHorizontal="true"
                    android:text="@string/start_activity"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/stop_button"
                    android:theme="@style/AppTheme.Button.Stop"
                    android:layout_centerHorizontal="true"
                    android:text="@string/stop_activity"/>

            </RelativeLayout>


    </LinearLayout>


</LinearLayout>

    </LinearLayout>
